# cpp-dynlibutils

./: .clang-format  CMakeLists.txt  LICENSE  memaddr.cpp  memaddr.h  memaddr.hpp  module.cpp  module.h  module.hpp  module_linux.cpp  module_windows.cpp  virtual.h  virtual.hpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
include/dynlibutils/: defer.hpp  loadflag.hpp  macros.h  memaccessor.hpp  memaddr.hpp  memprotector.hpp  module.hpp  protflag.hpp  virtual.hpp  vthook.hpp
src/: memaccessor.cpp  memprotector.cpp  module.cpp  module_apple.cpp  module_linux.cpp  module_windows.cpp
src/apple/: memaccessor.cpp  memprotector.cpp  module.cpp  os.h
src/linux/: memaccessor.cpp  memprotector.cpp  module.cpp  os.h
src/windows/: memaccessor.cpp  memprotector.cpp  module.cpp  os.h
